--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
 
 </div>
 <p>In this paper, we describe an addition to Wildcard: a system that enables end-users to create, extend and repair website adapters by demonstration within the browser. Using this scraping system, an end-user can perform web customizations using Wildcard on arbitrary websites, without ever needing to code an adapter. Through a series of examples, we show that our system can create Wildcard adapters on a variety of websites via demonstration (Section 2). We also describe key aspects of our system and how web scraping for customization leads to a constraint that simplifies the <em>wrapper induction</em> <span class="citation" data-cites="kushmerick2000">[<a href="#ref-kushmerick2000" role="doc-biblioref">8</a>]</span> task used to generalize user demonstrations (Section 3).</p>
+<div class="html-only">
 <figure>
 <img src="media/overview.png" id="fig:overview" alt="Figure 1: Our work enables end-users to create Wildcard site adapters by demonstration." /><figcaption aria-hidden="true">Figure 1: Our work enables end-users to create Wildcard site adapters by demonstration.</figcaption>
 </figure>
+</div>
 <p>Our key contribution is a set of three design principles that guided the development of our system, which also offer insights that might be applied to other end-user web scraping and customization tools (Section 4):</p>
 <ul>
 <li><strong>Unified Environment</strong>: Users should be able to scrape data and interact with the scraped data in a single, unified environment. This minimizes the barrier to fluidly switching back and forth between the two tasks, rather than treating them as entirely independent tasks.</li>
