--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </ul>
 <p>Finally, we share our broader vision for web scraping for customization, and some opportunities for future work, including a proposal for how Wildcard’s spreadsheet-like formula language might augment demonstrations to provide end-users with more expressiveness in the web scraping process (Section 6).</p>
 <h1 data-number="2" id="sec:demos"><span class="header-section-number">2</span> Motivating Examples</h1>
-<p>In this section, we show how end-users can create, extend and repair adapters for Wildcard via demonstration.<span class="pdf-only"> These demos are best viewed as videos in the online version of this paper ().</span></p>
+<p>In this section, we show how end-users can create, extend and repair adapters for Wildcard via demonstration.<span class="pdf-only"></span></p>
 <h2 data-number="2.1" id="creating-an-adapter"><span class="header-section-number">2.1</span> Creating An Adapter</h2>
 <p>Jen wants to customize her experience on Weather.com by sorting the ten-day forecast based on the description of the weather on each day, allowing her to easily view all the sunny days. She starts the adapter creation process by clicking a context menu item within the Weather.com page, and hovers over a data value she might like to scrape.</p>
 <video controls="controls" src="media/2.1.1.mp4" muted playsinline controls class>
@@ -100,12 +100,7 @@
 <p>Jen tries hovering over several other elements in the page, taking advantage of the live feedback environment to decide what data would be useful. After considering several options, she decides to save the date field in the first column of the table, and commits the action by clicking.</p>
 </div>
 <div class="pdf-only">
-<ul>
-<li>The selected row of data is annotated in the page with a border, to indicate that she will be demonstrating values from within that row (1 in Figure <strong>¿fig:creating?</strong>).</li>
-<li>The selected column of data is highlighted in the page with a green background, to show how the system has generalized her demonstration across all the rows in the data (3 &amp; 4 in Figure <strong>¿fig:creating?</strong>).</li>
-<li>A table view appears at the bottom of the screen, and displays how the values will appear in the data table (5 in Figure <strong>¿fig:creating?</strong>).</li>
-</ul>
-<p>Jen tries hovering over several other elements in the page, taking advantage of the live feedback environment to decide what data would be useful. After considering several options, she decides to save the date field in the first column of the table, and commits the action by clicking.</p>
+
 </div>
 <video controls="controls" src="media/2.1.2.mp4" muted playsinline controls class>
 </video>
@@ -113,7 +108,7 @@
 <p>Next, she performs a similar process to fill the next column with the weather descriptions. After filling both columns, she also tries hovering over previously scraped data, and the toolbar at the top of the page indicates which column corresponds to the previously scraped data. Finally, she ends the adapter creation process and is able to immediately sort the forecast by the weather description column, because Wildcard provides a <strong>unified environment</strong> that combines both scraping and customizing.</p>
 </div>
 <div class="pdf-only">
-<p>Next, she performs a similar process to fill the next column with the weather descriptions. After filling both columns, she also tries hovering over previously scraped data, and the toolbar at the top of the page indicates which column corresponds to the previously scraped data. Finally, she ends the adapter creation process (7 in Figure <strong>¿fig:creating?</strong>) and is able to immediately sort the forecast by the weather description column, because Wildcard provides a <strong>unified environment</strong> that combines both scraping and customizing.</p>
+
 </div>
 <video controls="controls" src="media/2.1.3.mp4" muted playsinline controls class>
 </video>
@@ -122,7 +117,7 @@
 <p>Jen has previously used Wildcard to customize timeanddate.com. In addition to sorting the list of holidays in a year by the day of the week, she also wants to sort them by category so she can view all the federal holidays together. Previously, she would have needed to find a programmer to help her edit the adapter code to incorporate this additional data, but using our system’s support for <strong>editing by demonstration</strong>, Jen can extend the adapter herself.</p>
 </div>
 <div class="pdf-only">
-<p>Jen uses Wildcard on timeanddate.com as can be seen from 1 in Figure <strong>¿fig:extending?</strong>. In addition to sorting the list of holidays in a year by the day of the week, she also wants to sort them by category so she can view all the federal holidays together. Previously, she would have needed to find a programmer to help her edit the adapter code to incorporate this additional data, but using our system’s support for <strong>editing by demonstration</strong>, Jen can extend the adapter herself.</p>
+
 </div>
 <div class="pdf-only">
 
@@ -131,7 +126,7 @@
 <p>While viewing the website, she clicks the “Edit Adapter” button above the Wildcard table to initiate the adapter editing process. As she hovers over the currently scraped values, the columns they belong to are highlighted. Finally, she clicks on “Federal Holiday” to add the new column of data and saves the changes. Jen then proceeds to sort the list by the type of holiday without the intervention of a programmer.</p>
 </div>
 <div class="pdf-only">
-<p>While viewing the website, she clicks the “Edit Adapter” button (2 in Figure <strong>¿fig:extending?</strong>) above the Wildcard table to initiate the adapter editing process. As she hovers over the currently scraped values, the columns they belong to are highlighted. Finally, she clicks on “Federal Holiday” (3 in Figure <strong>¿fig:extending?</strong>) to add the new column of data to the table (4 in Figure <strong>¿fig:extending?</strong>) and saves the changes (5 in Figure <strong>¿fig:extending?</strong>). Jen then proceeds to sort the list by the type of holiday without the intervention of a programmer.</p>
+
 </div>
 <video controls="controls" src="media/2.2.mp4" muted playsinline controls class>
 </video>
@@ -140,13 +135,13 @@
 <p>Jen next visits Google Scholar to look up references for her thesis project. Unfortunately, the customization she had applied to sort publications by their title (which is not natively supported by Google Scholar) is no longer working. In fact, the column in the Wildcard table that contained all the publication titles is empty, because the website’s internals changed and broke the adapter’s scraping logic. Jen can repair this on her own, again taking advantage of <strong>editing by demonstration</strong>.</p>
 </div>
 <div class="pdf-only">
-<p>Jen next visits Google Scholar to look up references for her thesis project. Unfortunately, the customization she had applied to sort publications by their title (which is not natively supported by Google Scholar) is no longer working. In fact, the column in the Wildcard table that contained all the publication titles is empty (1 in Figure <strong>¿fig:repairing?</strong>), because the website’s internals changed and broke the adapter’s scraping logic. Jen can repair this on her own, again taking advantage of <strong>editing by demonstration</strong>.</p>
+
 </div>
 <div class="html-only">
 <p>Jen initiates the editing process, and initially hovers over the desired value to demonstrate the column she wants to scrape. However, the <strong>live programming</strong> interface indicates to her that the values would be populated into column D; instead, she wants the values to be inserted into column A where they previously appeared. So, Jen clicks on the symbol for column A to indicate that she wants to scrape the values into that column and demonstrates the first publication title. She then proceeds to re-apply her customization to the website by sorting the publications by their title without the intervention of a programmer.</p>
 </div>
 <div class="pdf-only">
-<p>Jen initiates the editing process (2 in Figure <strong>¿fig:repairing?</strong>), and initially hovers over the desired value to demonstrate the column she wants to scrape. However, the <strong>live programming</strong> interface indicates to her that the values would be populated into column D; instead, she wants the values to be inserted into column A where they previously appeared. So, Jen clicks on the symbol for column A (3 in Figure <strong>¿fig:repairing?</strong>) to indicate that she wants to scrape the values into that column and demonstrates the first publication title (4 in Figure <strong>¿fig:repairing?</strong>). The missing values are now back in the table (5 in Figure <strong>¿fig:repairing?</strong>). She then proceeds to save her changes (6 in fig:repairing) and re-apply her customization to the website by sorting the publications by their title without the intervention of a programmer.</p>
+
 </div>
 <video controls="controls" src="media/2.3.mp4" muted playsinline controls class>
 </video>
