Remved link to web version from demos section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <p>While each of these principles has been explored in prior work by various researchers, our contribution in this work is combining them in a novel way for the domain of end-user web scraping and customization.</p>
 <p>Finally, we share our broader vision for <em>end-user web scraping for customization</em>, and some opportunities for future work, including a proposal for how Wildcard’s spreadsheet-like formula language might augment demonstrations to provide end-users with more expressiveness in the web scraping process (Section 6).</p>
 <h1 data-number="2" id="sec:demos"><span class="header-section-number">2</span> Motivating Examples</h1>
-<p>In this section, we show how end-users can create, extend and repair adapters for Wildcard via demonstration.<span class="pdf-only"></span></p>
+<p>In this section, we show how end-users can create, extend and repair adapters for Wildcard via demonstration.</p>
 <h2 data-number="2.1" id="creating-an-adapter"><span class="header-section-number">2.1</span> Creating An Adapter</h2>
 <p>Jen wants to customize her experience on Weather.com by sorting the ten-day forecast based on the description of the weather on each day, allowing her to easily view all the sunny days. She starts the adapter creation process by clicking a context menu item within the Weather.com page, and hovers over a data value she might like to scrape.</p>
 <video controls="controls" src="media/2.1.1.mp4" muted playsinline controls class>
